Fix calibrate modal sizes to avoid jumping

--- a/frontend-service/src/ui/views/_components/ValidationViewer/ValidationViewer.module.scss
+++ b/frontend-service/src/ui/views/_components/ValidationViewer/ValidationViewer.module.scss
@@ -1,5 +1,5 @@
 .validationWrapper {
-  min-height: 60vh;
+  min-height: 72.8vh;
   .tableWebform {
     tbody {
       td {
@@ -9,7 +9,7 @@
   }
 }
 .emptyValidationsWrapper {
-  min-height: 60vh;
+  min-height: 76.2vh;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -87,7 +87,7 @@
   justify-content: center;
   align-items: center;
   overflow: hidden;
-  min-height: 63.4vh !important;
+  min-height: 76.2vh !important;
   height: 100%;
 
   .spinnerPosition {
